# CropStressFM

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: tests.yml
benchmarks/: benchmark_esm2.py  benchmark_inference.py
docs/: API.md  INPUT_PREPARATION.md  MODEL_CARD.md  QUICKSTART.md  TROUBLESHOOTING.md
examples/input/: example_esm2_embeddings.npz  example_genes.csv  example_metadata.csv  example_proteins.fasta
examples/output/: example_predictions.csv  example_predictions.json
src/cropstressfm/: __init__.py  assets.py  cli.py  features.py  model.py  plotting.py  predictor.py  prepare.py  protein.py
src/cropstressfm/weights/: config.json  esm2_scaler.npz  manifest.json
tests/: test_features.py  test_prepare.py  test_release_examples.py
