[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cropstressfm"
version = "1.0.0"
description = "CropStressFM inference package for crop abiotic-stress gene prioritization"
readme = "README.md"
requires-python = ">=3.10"
license = {file = "LICENSE"}
keywords = ["crop", "abiotic stress", "promoter", "protein language model", "gene prioritization"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
  "numpy>=1.24",
  "pyfaidx>=0.8",
  "torch>=2.2",
]

[project.optional-dependencies]
protein = ["fair-esm==2.0.0"]
plot = ["matplotlib>=3.7"]
dev = ["pytest>=8.0"]
all = ["fair-esm==2.0.0", "matplotlib>=3.7", "pytest>=8.0"]

[project.scripts]
cropstressfm = "cropstressfm.cli:main"

[project.urls]
Homepage = "https://github.com/Qiu-Shizheng/CropStressFM"
Repository = "https://github.com/Qiu-Shizheng/CropStressFM"
Issues = "https://github.com/Qiu-Shizheng/CropStressFM/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cropstressfm = ["weights/*.json", "weights/*.npz", "weights/*.pt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
